@@ -36,6 +36,7 @@
  Other changes:
 
    - Do not install the resources which are managed as GResource (todo #970).
+   - myFileMonitor: migrate to G_ADD_PRIVATE (todo #994).
 
 -----------------------------------------------------------------------
  Version 0.48
